syntax = "proto3";
package pb;
option go_package = "./pb";


message Event {
    string title = 1;
    string message = 2;
}

message EventResultStream {
    string status = 1;
    Event event = 2;
}

message HandleEventResponse {
    string status = 1;
}

message Events {
    repeated Event event = 1;
}

service EventService {
    rpc HandleEvent (Event) returns (HandleEventResponse);
    rpc HandleDetailedEvent (Event) returns ( stream HandleEventResponse);
    rpc ClientStream(stream Event) returns (Events);
    rpc BidirectionalEventStream (stream Event) returns (stream HandleEventResponse);
}
